2005-06-11  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* src/callbacks.c: (cb_app_delete), (cb_net_in_color_changed),
	(cb_net_out_color_changed), (cb_change_current_page):
	* src/callbacks.h:
	* src/gnome-system-monitor.schemas.in:
	* src/interface.c: (create_sys_view):
	* src/load-graph.c: (net_scale), (get_net), (load_graph_update),
	(load_graph_unalloc), (load_graph_alloc), (load_graph_new):
	* src/load-graph.h:
	* src/procman.c: (timeouts_changed_cb), (color_changed_cb),
	(procman_data_new):
	* src/procman.h:

	Add network history graph. Closes #164115 and #120323.
	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/gnome-system-monitor.schemas.in:
	* src/procman.c: (procman_get_tree_state),
	(procman_save_tree_state):
	* src/proctable.c: (cb_columns_changed),
	(my_gtk_tree_view_get_column_with_sort_column_id),
	(proctable_set_columns_order), (proctable_get_columns_order),
	(proctable_new):
	* src/proctable.h: Implemented save/store for the proctable columns
	order.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (create_proc_field_page):
	* src/procman.c: (procman_get_tree_state),
	(procman_save_tree_state): Should fix column selection. Also fixed
	some leaks.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_preferences_dialog): Fixed spin
	button value for update_interval.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: 2.11.4 post release version bump.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.11.3.

2005-06-08  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_get_icon), (load_icon_for_commands):
	* src/proctable.c: (proctable_free_info): Fixed references mess that
	often causes segfaults.
	Special thanks to Rod Butcher who helped me.

2005-06-07  Benoît Dejean  <TazForEver@dlfp.org>
