@@ -1,3 +1,11 @@
+2005-06-12  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/callbacks.c: (cb_timeout), (cb_radio_processes):
+	* src/callbacks.h:
+	* src/interface.c: (create_proc_view), (create_main_window):
+	Moved Show combo box functionality to View menu.
+	Closes #305874.
+
 2005-06-11  Martin Ejdestig  <mejde@dtek.chalmers.se>
 
 	* src/callbacks.c: (cb_app_delete), (cb_net_in_color_changed),
